--- a/index.html
+++ b/index.html
@@ -125,76 +125,80 @@
       <section id="services-section">
         <h2>Our <span>Services</span></h2>
         <div class="services-container">
-          <div class="service-card" style="background-image: url('assets/icon/logo-design.png'); background-size: cover; background-position: center;">
+          <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i><img
-                  class="icon-image"
-                  src="assets/icon/pen-tool-2.png"
-                  alt="Logo Design Icon"
-                  style="
-                    width: 32px;
-                    height: 32px;
-                    margin-bottom: 0px;
-                    z-index: 2;
-                  "
+                <i
+                  ><img
+                    class="icon-image"
+                    src="assets/icon/pen-tool-2.png"
+                    alt="Logo Design Icon"
+                    style="
+                      width: 32px;
+                      height: 32px;
+                      margin-bottom: 0px;
+                      z-index: 2;
+                    "
                 /></i>
                 <h3 class="service-title">Logo Design</h3>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
             </div>
           </div>
-          <div class="service-card" style="background-image: url('assets/icon/development.png'); background-size: cover; background-position: center;">
+          <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-              <i><img
-                  class="icon-image"
-                  src="assets/icon/scroll.png"
-                  alt="Logo Design Icon"
-                  style="
-                    width: 32px;
-                    height: 32px;
-                    margin-bottom: 0px;
-                    z-index: 2;
-                  "
+                <i
+                  ><img
+                    class="icon-image"
+                    src="assets/icon/scroll.png"
+                    alt="Logo Design Icon"
+                    style="
+                      width: 32px;
+                      height: 32px;
+                      margin-bottom: 0px;
+                      z-index: 2;
+                    "
                 /></i>
                 <h3 class="service-title">Development</h3>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
             </div>
           </div>
-          <div class="service-card" style="background-image: url('assets/icon/uiuxdesign.png'); background-size: cover; background-position: center;">
+          <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i><img
-                  class="icon-image"
-                  src="assets/icon/ruler&pen.png"
-                  alt="Logo Design Icon"
-                  style="
-                    width: 32px;
-                    height: 32px;
-                    margin-bottom: 0px;
-                    z-index: 2;
-                  "
+                <i
+                  ><img
+                    class="icon-image"
+                    src="assets/icon/ruler&pen.png"
+                    alt="Logo Design Icon"
+                    style="
+                      width: 32px;
+                      height: 32px;
+                      margin-bottom: 0px;
+                      z-index: 2;
+                    "
                 /></i>
                 <h3 class="service-title">UI/UX Design</h3>
               </div>
               <a href="#" class="service-link">Request a quote &rarr;</a>
             </div>
           </div>
-          <div class="service-card" style="background-image: url('assets/icon/digitalmark.png'); background-size: cover; background-position: center;">
+          <div class="service-card">
             <div class="service-content">
               <div class="service-title-wrapper">
-                <i><img
-                  class="icon-image"
-                  src="assets/icon/monitor.png"
-                  alt="Logo Design Icon"
-                  style="
-                    width: 32px;
-                    height: 32px;
-                    margin-bottom: 0px;
-                    z-index: 2;
-                  "
+                <i
+                  ><img
+                    class="icon-image"
+                    src="assets/icon/monitor.png"
+                    alt="Logo Design Icon"
+                    style="
+                      width: 32px;
+                      height: 32px;
+                      margin-bottom: 0px;
+                      z-index: 2;
+                    "
                 /></i>
                 <h3 class="service-title">Digital Marketing</h3>
               </div>
@@ -334,44 +338,62 @@
     </main>
     <div class="footer">
       <div class="top">
-          <div class="top-section">
-              <div class="logo">
-                  <img src="assets/Logo large.png" alt="Logo">
-              </div>
-              <div class="social-icons">
-                <a href="#"><img src="assets/icon/dribbble.png" alt="Dribbble"></a>
-                  <a href="#"><img src="assets/icon/behance.png" alt="Benhance"></a>
-                  <a href="#"><img src="assets/icon/instagram.png" alt="Instagram"></a>
-                  <a href="#"><img src="assets/icon/linkedin.png" alt="LinkedIn"></a>
-              </div>
+        <div class="top-section">
+          <div class="logo">
+            <img src="assets/Logo large.png" alt="Logo" />
           </div>
-          <div class="newsletter">
-            <h3 style="color: white;">Subscribe to our Newsletter</h3>
-            <label for="email" style="color: white;">Email*</label>
-            <input type="email" id="email" placeholder="">
-            <p>By subscribing you agree to our <a href="#">Terms & Conditions</a></p>
-            <button>Subscribe &rarr;</button>
+          <div class="social-icons">
+            <a href="#"
+              ><img src="assets/icon/dribbble.png" alt="Dribbble"
+            /></a>
+            <a href="#"><img src="assets/icon/behance.png" alt="Benhance" /></a>
+            <a href="#"
+              ><img src="assets/icon/instagram.png" alt="Instagram"
+            /></a>
+            <a href="#"
+              ><img src="assets/icon/linkedin.png" alt="LinkedIn"
+            /></a>
+          </div>
         </div>
-    </div>
-    <div class="bottom">
+        <div class="newsletter">
+          <h3 style="color: white">Subscribe to our Newsletter</h3>
+          <label for="email" style="color: white">Email*</label>
+          <input type="email" id="email" placeholder="" />
+          <p>
+            By subscribing you agree to our <a href="#">Terms & Conditions</a>
+          </p>
+          <button>Subscribe &rarr;</button>
+        </div>
+      </div>
+      <div class="bottom">
         <div class="contact">
-          <h3 style="color: white;">Contact</h3>
-          <p style="color: white;"><img src="assets/icon/location.png" alt="Location">66 Road Brooklyn Street, 600</p>
-          <p style="color: white;"><img src="assets/icon/call.png" alt="Phone">(509) 562-1912</p>
-          <p style="color: white;"><img src="assets/icon/sms.png" alt="Email">contact@creativedesign.com</p>
+          <h3 style="color: white">Contact</h3>
+          <p style="color: white">
+            <img src="assets/icon/location.png" alt="Location" />66 Road
+            Brooklyn Street, 600
+          </p>
+          <p style="color: white">
+            <img src="assets/icon/call.png" alt="Phone" />(509) 562-1912
+          </p>
+          <p style="color: white">
+            <img
+              src="assets/icon/sms.png"
+              alt="Email"
+            />contact@creativedesign.com
+          </p>
         </div>
         <div class="explore">
-          <h3 style="color: white;">Explore</h3>
-            <a href="#">About</a>
-            <a href="#">Our Team</a>
-            <a href="#">Shop</a>
-            <a href="#">Career</a>
-            <a href="#">Blog</a>
+          <h3 style="color: white">Explore</h3>
+          <a href="#">About</a>
+          <a href="#">Our Team</a>
+          <a href="#">Shop</a>
+          <a href="#">Career</a>
+          <a href="#">Blog</a>
         </div>
-    </div>
-    <div class="copyright">
+      </div>
+      <div class="copyright">
         &copy; 2023 Creative Design Agency, All Rights Reserved
+      </div>
     </div>
-</div>
   </body>
 </html>
